ExerciseDetailFragment com chamada de API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,4 +171,9 @@
     <string name="image">Imagem</string>
     <string name="target_muscle">Músculos alvo</string>
     <string name="next_training">Próximo Treino</string>
+    <string name="exercise_name">Nome do Exercício</string>
+    <string name="description_value">Descrição do exercício</string>
+    <string name="primary_muscle">Músculos Primários</string>
+    <string name="muscle_list">Lista de músculos</string>
+    <string name="secondary_muscle">Músculos Secundários</string>
 </resources>
